# envlock

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  TROUBLESHOOTING.md  package-lock.json  package.json
.github/workflows/: ci.yml  converge.yml  docs.yml  first-star-observer.yml  release-beta.yml  release.yml
.task/: MAIN.md  PHASE_1.1.md  PHASE_1.2.md  PHASE_1.3.md  PHASE_1.4.md  PHASE_1.5.md  PHASE_1.6.md
docs/: index.md  install.md  release.md  support-policy.md  uninstall.md  update.md
docs/.vitepress/: config.ts
docs/changelog/: v0.4.5.md  v0.4.6-beta.10.md  v0.4.6-beta.2.md  v0.4.6-beta.4.md  v0.4.6-beta.5.md  v0.4.6-beta.6.md  v0.4.6-beta.8.md  v0.4.6-beta.9.md  v0.4.7-beta.1.md  v0.4.7.md
docs/explanation/: design-boundaries.md  faq.md  first-star-observability.md  geo-index.md  language-maintenance.md  support-policy.md  troubleshooting.md  why-envlock.md
docs/how-to/: ci-integration.md  command-mode.md  common-recipes.md  docs-maintenance.md  install.md  migrate-to-v0.2.md  migrate-to-v0.3.md  update-and-uninstall.md  use-profiles.md
examples/: envlock.sample.json
scripts/: build-skill-zip.sh  converge-check.sh  e2e-smoke.sh  install.sh  observe_first_star.py  sync-homebrew-tap.sh  uninstall.sh  update-tap-formula.sh  verify-doc-links.sh  verify-public-surface.sh  version-sync-check.sh
src/: app.rs  config.rs  injection.rs  lib.rs  logging.rs  main.rs  preview.rs  profile.rs  self_update.rs
tests/: alias.rs  command_mode.rs  default_profile.rs  logging.rs  output_mode.rs  plugin_node.rs  preview.rs  profiles.rs  use_option.rs
(+68 files in other folders)
